# nothing_good

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
buildfiles/: Dockerfile
src/: config.py
src/bot/: dictionary.py  dispatcher.py  main.py
src/bot/handlers/: __init__.py  admin_handlers.py  basic_handlers.py
src/bot/handlers/user_handlers/: channels_handlers.py  post_handlers.py
src/bot/keyboards/: keyboard.py
src/bot/middlewares/: admin_middleware.py  db_middleware.py  user_middleware.py
src/bot/schemas/: dispatcher_data.py
src/bot/states/: states_groups.py
src/bot/utils/: log.py  utils.py
src/bot/utils/schemas/: models.py
src/database/: database.py
src/database/migrations/: env.py
src/database/migrations/versions/: 0b2258b5ee40_reborn.py  0ff303cebbdb_startuem.py  48e041856b97_gosh.py  608facbe3fc1_hope.py  69e995b4b3dd_idk.py  bc32e14c14ee_yazaebalsya.py  d9ccf7ca4fb7_bydefault.py  eff62dbe8538_yazaebalsya2.py
src/database/models/: base.py  channel.py  user.py
src/database/repository/: abstract.py  channel.py  user.py
src/services/nats/: broadcast.py  worker.py
